--- a/src/styles/bolt.scss
+++ b/src/styles/bolt.scss
@@ -317,8 +317,8 @@ $bolt-inline-label-border-width: $bolt-border-width;
 .c-bolt-inline-label {
   @include bolt-padding-left(medium);
 
-  position: relative;
   display: inline-block;
+  position: relative;
   cursor: pointer;
 
   &:before,
@@ -438,7 +438,7 @@ $bolt-input-field-transition: $bolt-transition;
     color: $bolt-input-field-text-color--invalid;
     border-color: $bolt-input-field-border-color--invalid;
 
-    & ~ .c-bolt-input-message--invalid {
+    ~ .c-bolt-input-message--invalid {
       display: block;
     }
   }
