--- a/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
+++ b/src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
@@ -81,7 +81,7 @@
                 Fieldset 1: Text
               </h2>
             </legend>
-            <ol class="c-bolt-fieldset__items">
+            <div class="c-bolt-fieldset__items">
               <div class="c-bolt-fieldset__item">
                 <input class="c-bolt-input-field" type="number" name="number-input" id="number-input" placeholder="Enter a number" required />
                 <label class="c-bolt-floating-label" for="number-input">
@@ -142,7 +142,7 @@
                   Description
                 </label>
               </div>
-            </ol>
+            </div>
           </fieldset>
           <fieldset class="c-bolt-fieldset">
             <legend class="c-bolt-fieldset__legend">
