refactor: wiring up PL + webpack compiling CSS

--- a/apps/pattern-lab--workshop/src/_meta/_01-foot.twig
+++ b/apps/pattern-lab--workshop/src/_meta/_01-foot.twig
@@ -2,7 +2,6 @@
   <!--DO NOT REMOVE-->
   {{ patternLabFoot | raw }}
 
-    {# <script src="/scripts/bolt-app.min.js" async type="module"></script> #}
-    <script src="/scripts/bolt-app.min.js" async></script>
+    <script src="../../assets/bolt-app.js?{{ cacheBuster }}" async></script>
   </body>
 </html>
