--- a/apps/pattern-lab--workshop/src/_meta/_00-head.twig
+++ b/apps/pattern-lab--workshop/src/_meta/_00-head.twig
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../../styles/bolt.css?{{ cacheBuster }}" media="all" />
+    <link rel="stylesheet" href="../../assets/bolt.css?{{ cacheBuster }}" media="all" />
 
 
     <meta name="bolt-javascript-path"  content="/vendor/">
