--- a/src/_patterns/02-components/bolt-background/src/background.twig
+++ b/src/_patterns/02-components/bolt-background/src/background.twig
@@ -43,6 +43,7 @@
   shapeAlignment in shapeAlignments ? baseClass ~ "__shapes--" ~ shapeAlignment : baseClass ~ "__shapes--right"
 ] %}
 
+{% set x = true %}
 
 
 <bolt-background bolt-component>
@@ -75,3 +76,6 @@
     </div>
   </div>
 </bolt-background>
+{% if TWIG_ENV == 'pl' %}
+  {{ validate_json_schema('@bolt/background.schema.json', _self) }}
+{% endif %}
