Add validation to button and background schemas

--- a/src/_patterns/02-components/bolt-button/src/button.twig
+++ b/src/_patterns/02-components/bolt-button/src/button.twig
@@ -64,3 +64,6 @@
 
   </{{ tag }}>
 </bolt-button>
+{% if TWIG_ENV == 'pl' %}
+  {{ validate_json_schema('@bolt/button.schema.json', _self) }}
+{% endif %}
