Adding code sample to docs

--- a/src/_patterns/02-components/bolt-button/demos/00-button-docs.twig
+++ b/src/_patterns/02-components/bolt-button/demos/00-button-docs.twig
@@ -1,5 +1,12 @@
 {% set schema = get_data('@bolt/button.schema.json') %}
 
+{% set code %} {%- verbatim -%}
+{% include '@bolt/button.twig' with {
+  text: 'My button'
+} only %}
+{%- endverbatim -%} {% endset %}
+
 {% include "@bolt/schema-docs.twig" with {
-  schema: schema
+  schema: schema,
+  code: code,
 } %}
