--- a/packages/core-css/05-objects/objects-island/_objects-island.scss
+++ b/packages/core-css/05-objects/objects-island/_objects-island.scss
@@ -1,4 +1,4 @@
-@import '@bolt/tools-spacing';
+@import '../../02-tools/tools-spacing/tools-spacing';
 
 .o-bolt-island--small {
   @include bolt-padding(small);
