--- a/packages/core-css/05-objects/objects-ui-list/_objects-ui-list.scss
+++ b/packages/core-css/05-objects/objects-ui-list/_objects-ui-list.scss
@@ -2,7 +2,7 @@
    #UI-LIST OBJECT
    ========================================================================== */
 
-@import '@bolt/tools-spacing';
+@import '../../02-tools/tools-spacing/tools-spacing';
 
 /**
  * The UI list object creates blocky list items with a separator between each
