--- a/packages/core-css/05-objects/objects-wrapper/_objects-wrapper.scss
+++ b/packages/core-css/05-objects/objects-wrapper/_objects-wrapper.scss
@@ -1,8 +1,8 @@
 /**
   * @define o-bolt-wrapper
   */
-@import '@bolt/tools-spacing';
-@import '@bolt/settings-breakpoints';
+@import '../../01-settings/settings-breakpoints/settings-breakpoints';
+@import '../../02-tools/tools-spacing/tools-spacing';
 
 $bolt-wrapper--max-width: bolt-breakpoint(xxlarge) !default;
 
