--- a/packages/core-css/_generic-all.scss
+++ b/packages/core-css/_generic-all.scss
@@ -2,8 +2,8 @@
    GENERIC - ALL
 \* ------------------------------------ */
 
-@import './03-generic/generic-font-stacks/generic-font-stacks';
-@import './03-generic/generic-global/generic-global';
-@import './03-generic/generic-normalize/generic-normalize';
-@import './03-generic/generic-reset/generic-reset';
-@import './03-generic/generic-shared/generic-shared';
+@import '03-generic/generic-font-stacks/generic-font-stacks';
+@import '03-generic/generic-global/generic-global';
+@import '03-generic/generic-normalize/generic-normalize';
+@import '03-generic/generic-reset/generic-reset';
+@import '03-generic/generic-shared/generic-shared';
