--- a/packages/core-css/_objects-all.scss
+++ b/packages/core-css/_objects-all.scss
@@ -2,13 +2,13 @@
    OBJECTS - ALL
 \* ------------------------------------ */
 
-@import './05-objects/objects-bare-list/objects-bare-list';
-@import './05-objects/objects-block/objects-block';
-@import './05-objects/objects-crop/objects-crop';
-@import './05-objects/objects-flag/objects-flag';
-@import './05-objects/objects-grid/objects-grid';
-@import './05-objects/objects-inline-list/objects-inline-list';
-@import './05-objects/objects-island/objects-island';
-@import './05-objects/objects-ratio/objects-ratio';
-@import './05-objects/objects-ui-list/objects-ui-list';
-@import './05-objects/objects-wrapper/objects-wrapper';
+@import '05-objects/objects-bare-list/objects-bare-list';
+@import '05-objects/objects-block/objects-block';
+@import '05-objects/objects-crop/objects-crop';
+@import '05-objects/objects-flag/objects-flag';
+@import '05-objects/objects-grid/objects-grid';
+@import '05-objects/objects-inline-list/objects-inline-list';
+@import '05-objects/objects-island/objects-island';
+@import '05-objects/objects-ratio/objects-ratio';
+@import '05-objects/objects-ui-list/objects-ui-list';
+@import '05-objects/objects-wrapper/objects-wrapper';
