--- a/packages/core-css/05-objects/objects-flag/_objects-flag.scss
+++ b/packages/core-css/05-objects/objects-flag/_objects-flag.scss
@@ -1,7 +1,7 @@
 /* ==========================================================================
    #FLAG (AKA MEDIA OBJECT)
    ========================================================================== */
-@import '@bolt/tools-spacing';
+@import '../../02-tools/tools-spacing/tools-spacing';
 
 $bolt-flag-sizes: (
   'small',
@@ -81,35 +81,35 @@ $bolt-flag-alignments: (
 
 
 
-// 
-// 
+//
+//
 // // Flexbox adjustments
 // @supports (display: flex) {
 //   .o-flag {
 //     display: flex;
 //     align-items: flex-start;
-// 
+//
 //     &--center {
 //       align-items: center;
 //     }
-// 
+//
 //     &--bottom {
 //       align-items: flex-end;
 //     }
-//     
+//
 //     &--rev .o-bolt-flag__image {
 //       order: 1;
 //       padding-left: $spacing-unit;
 //       padding-right: $spacing-unit;
 //     }
 //   }
-// 
-// 
+//
+//
 //   .o-bolt-flag__image,
 //   .o-bolt-flag__body {
 //       display: initial;
 //   }
-// 
+//
 //   .o-bolt-flag__body {
 //     // min-width: 0;
 //     // flex: 1 1 auto;
