--- a/packages/core-css/index.scss
+++ b/packages/core-css/index.scss
@@ -1,10 +1,10 @@
 /* ------------------------------------ *\
   BOLT CSS CORE
 \* ------------------------------------ */
-@import './settings-all';
-@import './tools-all';
-@import './generic-all';
-@import './elements-all';
-@import './objects-all';
-@import './themes-all';
-@import './utilities-all';
+@import 'settings-all';
+@import 'tools-all';
+@import 'generic-all';
+@import 'elements-all';
+@import 'objects-all';
+@import 'themes-all';
+@import 'utilities-all';
