--- a/src/_patterns/02-components/bolt-sticky/src/sticky.scss
+++ b/src/_patterns/02-components/bolt-sticky/src/sticky.scss
@@ -8,5 +8,9 @@ bolt-sticky {
 }
 
 .c-bolt-sticky {
+  display: block;
+  position: sticky;
+  top: 0;
+  width: 100%;
   z-index: 99999; // TODO: [Mai] We need z-index management.
 }
