--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
@@ -1,3 +1,5 @@
+@import '@bolt/tools-all';
+
 .c-bolt-background-shapes {
   width: 300px;
 
@@ -9,21 +11,19 @@
     width: 900px;
   }
 
-  &__svg {
-    fill: bolt-color(gray);
-  }
-
   &__shape {
-    float: left;
-    width: 33.3%;
 
-    &:nth-child(3n+1) {
-      clear: left;
+    svg {
+      display: block;
     }
 
     &--orange {
       .c-bolt-background-shapes__svg {
         fill: bolt-color(orange);
+      }
+
+      .c-bolt-background-shapes__svg-outline {
+        stroke: bolt-color(orange);
       }
     }
 
@@ -31,11 +31,53 @@
       .c-bolt-background-shapes__svg {
         fill: bolt-color(yellow);
       }
+
+      .c-bolt-background-shapes__svg-outline {
+        stroke: bolt-color(yellow);
+      }
     }
 
     &--teal {
       .c-bolt-background-shapes__svg {
         fill: bolt-color(teal);
+      }
+
+      .c-bolt-background-shapes__svg-outline {
+        stroke: bolt-color(teal);
+      }
+    }
+
+    &--indigo {
+      .c-bolt-background-shapes__svg {
+        fill: bolt-color(indigo);
+      }
+
+      .c-bolt-background-shapes__svg-outline {
+        stroke: bolt-color(indigo);
+      }
+    }
+
+    &--interior-yellow {
+      .c-bolt-background-shapes__svg-interior {
+        fill: bolt-color(yellow);
+      }
+    }
+
+    &--interior-indigo {
+      .c-bolt-background-shapes__svg-interior {
+        fill: bolt-color(indigo);
+      }
+    }
+
+    &--interior-teal {
+      .c-bolt-background-shapes__svg-interior {
+        fill: bolt-color(teal);
+      }
+    }
+
+    &--interior-orange {
+      .c-bolt-background-shapes__svg-interior {
+        fill: bolt-color(orange);
       }
     }
   }
