--- a/src/_patterns/02-components/bolt-background/src/background.scss
+++ b/src/_patterns/02-components/bolt-background/src/background.scss
@@ -16,6 +16,14 @@ $bolt-background-dark-overlay-opacity--light: 0.3;
 $bolt-background-dark-overlay-opacity--medium: 0.55;
 $bolt-background-dark-overlay-opacity--heavy: 0.8;
 
+$bolt-bg-shape-offset-bottom-default: -100px;
+$bolt-bg-shape-offset-side-default: $bolt-bg-shape-offset-bottom-default * 1.2;
+$bolt-bg-shape-offset-bottom-small: -150px;
+$bolt-bg-shape-offset-side-small: $bolt-bg-shape-offset-bottom-small * 1.2;
+$bolt-bg-shape-offset-bottom-large: -300px;
+$bolt-bg-shape-offset-side-large: $bolt-bg-shape-offset-bottom-large * 1.2;
+
+
 
 // Zoom animation treatment
 @keyframes a-bolt-zoom-in-out {
@@ -66,29 +74,7 @@ $bolt-background-dark-overlay-opacity--heavy: 0.8;
   animation: a-bolt-zoom-in-out 45s ease-in-out infinite both;
 }
 
-.c-bolt-background__video {
-  z-index: 10;
-  pointer-events: none;
-  opacity: 0;
-  transition: all 0.5s ease;
 
-  &.is-playing,
-  &.is-paused,
-  &.is-finished {
-    opacity: 1;
-    pointer-events: auto;
-  }
-
-
-  .video-js {
-    max-width: 1400px;
-    margin: 0 auto;
-    min-width: 0;
-    width: 100%;
-  }
-}
-
-.c-bolt-background__video,
 .c-bolt-background__image {
   @include bolt-margin(auto);
 
@@ -159,30 +145,30 @@ $bolt-background-dark-overlay-opacity--heavy: 0.8;
 .c-bolt-background__shapes {
   position: absolute;
   transform: rotate(-45deg);
-  right: -100px;
-  bottom: -100px;
+  right: $bolt-bg-shape-offset-side-default;
+  bottom: $bolt-bg-shape-offset-side-default;
 
   @include respond-to(small) {
-    right: -150px;
-    bottom: -150px;
+    right: $bolt-bg-shape-offset-side-small;
+    bottom: $bolt-bg-shape-offset-side-small;
   }
 
   @include respond-to(large) {
-    right: -300px;
+    right: $bolt-bg-shape-offset-side-large;
     bottom: -300px;
   }
 }
 
 .c-bolt-background__shapes--left {
   transform: rotate(45deg);
-  left: -100px;
+  left: $bolt-bg-shape-offset-side-default;
   right: auto;
 
   @include respond-to(small) {
-    left: -150px;
+    left: $bolt-bg-shape-offset-side-small;
   }
 
   @include respond-to(large) {
-    left: -300px;
+    left: $bolt-bg-shape-offset-side-large;
   }
 }
